--- a/frontend/gerenciador-de-contatos/src/components/CreateAnAccount/styles.css
+++ b/frontend/gerenciador-de-contatos/src/components/CreateAnAccount/styles.css
@@ -12,7 +12,8 @@
   display: flex;
   flex-direction: column;
   gap: 5px;
-  width: 90vw;
+  max-width: 600px;
+  min-width: 300px;
   padding-bottom: 15px;
   background-color: rgb(239, 239, 239);
   border-radius: 25px;
